--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -7,8 +7,20 @@
 
   <img src="me.webp" alt="Fanyi Pu" class="author-photo" width="100" height="100" />
   <div class="affiliation">
-    College of Computing and Data Science<br />
-    Nanyang Technological University, Singapore
+    @switch (lang()) {
+      @case ('zh') {
+        计算与数据科学学院<br />
+        南洋理工大学，新加坡
+      }
+      @case ('ja') {
+        コンピューティング・データサイエンス学部<br />
+        南洋理工大学、シンガポール
+      }
+      @default {
+        College of Computing and Data Science<br />
+        Nanyang Technological University, Singapore
+      }
+    }
   </div>
   <div class="contact-info">
     <span class="contact-item">
