--- a/src/app/components/table-of-contents/table-of-contents.html
+++ b/src/app/components/table-of-contents/table-of-contents.html
@@ -15,7 +15,7 @@
 <div #tocContainer>
   @if (open()) {
     <nav class="toc" aria-label="Table of Contents">
-      <div class="toc-title">Contents</div>
+      <div class="toc-title">{{ tocTitle[lang()] }}</div>
       <ol class="toc-list">
         @for (s of sections; track s.id) {
           <li [class.toc-active]="scrollSpy.activeId() === s.id">
@@ -23,7 +23,7 @@
               @if (s.number !== null) {
                 <span class="toc-number">{{ s.number }}</span>
               }
-              {{ s.title }}
+              {{ s.title[lang()] }}
             </a>
           </li>
         }
