--- a/src/app/components/competitions/competitions.html
+++ b/src/app/components/competitions/competitions.html
@@ -3,29 +3,29 @@
     @case ('zh') {
       <h3 class="subsection-heading">4.1 &nbsp; ICPC（国际大学生程序设计竞赛）</h3>
       <ul class="itemize">
-        <li><strong>第22名</strong>，ICPC 亚太锦标赛，2024</li>
-        <li><strong>第13名</strong>，ICPC 亚洲雅加达区域赛，2023</li>
-        <li><strong>第6名</strong>，ICPC 亚洲马尼拉区域赛，2022</li>
-        <li><strong>金牌</strong>，ICPC 亚洲昆明区域赛，2021</li>
-        <li><strong>银牌</strong>，ICPC 亚洲南京区域赛，2021</li>
+        <li><strong>第 22 名</strong>，ICPC 亚太区锦标赛，2024 年</li>
+        <li><strong>第 13 名</strong>，ICPC 亚洲雅加达区域赛，2023 年</li>
+        <li><strong>第 6 名</strong>，ICPC 亚洲马尼拉区域赛，2022 年</li>
+        <li><strong>金牌</strong>，ICPC 亚洲昆明区域赛，2021 年</li>
+        <li><strong>银牌</strong>，ICPC 亚洲南京区域赛，2021 年</li>
       </ul>
       <h3 class="subsection-heading">4.2 &nbsp; Simon Marais 数学竞赛</h3>
       <ul class="itemize">
-        <li><strong>校内最佳奖</strong>，南洋理工大学，2022年12月</li>
+        <li><strong>校内最佳奖</strong>，南洋理工大学，2022 年 12 月</li>
       </ul>
     }
     @case ('ja') {
       <h3 class="subsection-heading">4.1 &nbsp; ICPC（国際大学対抗プログラミングコンテスト）</h3>
       <ul class="itemize">
-        <li><strong>第22位</strong>、ICPC アジア太平洋チャンピオンシップ、2024</li>
-        <li><strong>第13位</strong>、ICPC アジア・ジャカルタ地区大会、2023</li>
-        <li><strong>第6位</strong>、ICPC アジア・マニラ地区大会、2022</li>
-        <li><strong>金メダル</strong>、ICPC アジア・昆明地区大会、2021</li>
-        <li><strong>銀メダル</strong>、ICPC アジア・南京地区大会、2021</li>
+        <li><strong>第22位</strong>、ICPC アジア太平洋選手権、2024年</li>
+        <li><strong>第13位</strong>、ICPC アジア・ジャカルタ地区大会、2023年</li>
+        <li><strong>第6位</strong>、ICPC アジア・マニラ地区大会、2022年</li>
+        <li><strong>金メダル</strong>、ICPC アジア・昆明地区大会、2021年</li>
+        <li><strong>銀メダル</strong>、ICPC アジア・南京地区大会、2021年</li>
       </ul>
       <h3 class="subsection-heading">4.2 &nbsp; Simon Marais 数学コンペティション</h3>
       <ul class="itemize">
-        <li><strong>大学内最優秀賞</strong>、南洋理工大学、2022年12月</li>
+        <li><strong>学内最優秀賞</strong>、南洋理工大学、2022年12月</li>
       </ul>
     }
     @default {
