--- a/src/app/components/abstract/abstract.html
+++ b/src/app/components/abstract/abstract.html
@@ -4,26 +4,26 @@
     @case ('zh') {
       <div class="abstract-content">
         <p>
-          我目前是<a href="https://www.ntu.edu.sg/" target="_blank" rel="noopener noreferrer">南洋理工大学</a>的大四本科生，
-          主修<a href="https://www.ntu.edu.sg/education/undergraduate-programme/bachelor-of-science-in-data-science-artificial-intelligence" target="_blank" rel="noopener noreferrer">数据科学与人工智能</a>。
+          我是<a href="https://www.ntu.edu.sg/" target="_blank" rel="noopener noreferrer">南洋理工大学</a>的一名大四本科生，
+          主修<a href="https://www.ntu.edu.sg/education/undergraduate-programme/bachelor-of-science-in-data-science-artificial-intelligence" target="_blank" rel="noopener noreferrer">数据科学与人工智能</a>专业。
         </p>
         <p>
-          我目前在<a href="https://www.sensetime.com/en" target="_blank" rel="noopener noreferrer">商汤科技</a>和<a href="https://www.mmlab-ntu.com/" target="_blank" rel="noopener noreferrer">MMLab&#64;NTU</a>进行研究。
-          我有幸在<a href="https://liuziwei7.github.io/" target="_blank" rel="noopener noreferrer">刘子纬教授</a>的指导下学习，
-          也非常感谢<a href="https://brianboli.com/" target="_blank" rel="noopener noreferrer">李博</a>、
-          <a href="https://caizhongang.com/" target="_blank" rel="noopener noreferrer">蔡忠刚</a>和<a href="https://scholar.google.com/citations?user=jZH2IPYAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">杨磊</a>给予我的大量帮助。
-          我目前的研究方向是<em>多模态（统一）模型</em>和<em>空间智能</em>。
+          目前，我在<a href="https://www.sensetime.com/en" target="_blank" rel="noopener noreferrer">商汤科技</a>和<a href="https://www.mmlab-ntu.com/" target="_blank" rel="noopener noreferrer">MMLab&#64;NTU</a>进行研究工作。
+          我有幸师从<a href="https://liuziwei7.github.io/" target="_blank" rel="noopener noreferrer">刘子纬教授</a>，
+          同时也非常感谢<a href="https://brianboli.com/" target="_blank" rel="noopener noreferrer">李博</a>、
+          <a href="https://caizhongang.com/" target="_blank" rel="noopener noreferrer">蔡忠刚</a>和<a href="https://scholar.google.com/citations?user=jZH2IPYAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">杨磊</a>给予我的悉心指导与帮助。
+          我的研究兴趣主要集中在<em>多模态（统一）模型</em>和<em>空间智能</em>领域。
         </p>
         <p>
-          在<a href="http://www.sxyz.net/" target="_blank" rel="noopener noreferrer">绍兴市第一中学</a>期间，
-          我参加了<a href="https://www.noi.cn/" target="_blank" rel="noopener noreferrer">信息学奥林匹克竞赛</a>。
-          此外，我参加了<a href="https://icpc.global/" target="_blank" rel="noopener noreferrer">ICPC</a>竞赛，
-          在2022年昆明亚洲区域赛中获得<a href="assets/pdf/awards/Kunming.pdf" target="_blank" rel="noopener noreferrer">金牌</a>，
+          高中就读于<a href="http://www.sxyz.net/" target="_blank" rel="noopener noreferrer">绍兴市第一中学</a>期间，
+          我曾参加<a href="https://www.noi.cn/" target="_blank" rel="noopener noreferrer">信息学奥林匹克竞赛</a>。
+          此外，我还参加了<a href="https://icpc.global/" target="_blank" rel="noopener noreferrer">ICPC</a>竞赛，
+          并在2022年昆明亚洲区域赛中斩获<a href="assets/pdf/awards/Kunming.pdf" target="_blank" rel="noopener noreferrer">金牌</a>，
           在2022年南京亚洲区域赛中获得<a href="assets/pdf/awards/Nanjing.pdf" target="_blank" rel="noopener noreferrer">银牌</a>。
-          我是<a href="https://ntu-icpc.github.io/npc/" target="_blank" rel="noopener noreferrer">南洋编程竞赛</a>的贡献者。
+          我同时也是<a href="https://ntu-icpc.github.io/npc/" target="_blank" rel="noopener noreferrer">南洋编程竞赛</a>的贡献者之一。
         </p>
         <p>
-          我喜欢下棋，我的 Lichess ID 是 <a href="https://lichess.org/@/pufanyi" target="_blank" rel="noopener noreferrer">&#64;pufanyi</a>，目前快棋等级分为 2086。
+          业余时间我喜欢下国际象棋，我的 Lichess ID 是 <a href="https://lichess.org/@/pufanyi" target="_blank" rel="noopener noreferrer">&#64;pufanyi</a>，目前的快棋等级分为 2086。
         </p>
       </div>
       <div class="keywords">
@@ -34,26 +34,26 @@
     @case ('ja') {
       <div class="abstract-content">
         <p>
-          現在、<a href="https://www.ntu.edu.sg/" target="_blank" rel="noopener noreferrer">南洋理工大学</a>の最終学年の学部生で、
+          現在、<a href="https://www.ntu.edu.sg/" target="_blank" rel="noopener noreferrer">南洋理工大学</a>の学部4年生で、
           <a href="https://www.ntu.edu.sg/education/undergraduate-programme/bachelor-of-science-in-data-science-artificial-intelligence" target="_blank" rel="noopener noreferrer">データサイエンスと人工知能</a>を専攻しています。
         </p>
         <p>
-          現在、<a href="https://www.sensetime.com/en" target="_blank" rel="noopener noreferrer">SenseTime</a>および<a href="https://www.mmlab-ntu.com/" target="_blank" rel="noopener noreferrer">MMLab&#64;NTU</a>で研究を行っています。
-          <a href="https://liuziwei7.github.io/" target="_blank" rel="noopener noreferrer">Liu Ziwei教授</a>のご指導のもと研究する機会に恵まれ、
-          また、<a href="https://brianboli.com/" target="_blank" rel="noopener noreferrer">Bo Li</a>、
-          <a href="https://caizhongang.com/" target="_blank" rel="noopener noreferrer">Zhongang Cai</a>、<a href="https://scholar.google.com/citations?user=jZH2IPYAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Lei Yang</a>からも多大なご支援をいただいています。
-          現在の研究テーマは、<em>マルチモーダル（統合）モデル</em>と<em>空間知能</em>です。
+          現在、<a href="https://www.sensetime.com/en" target="_blank" rel="noopener noreferrer">SenseTime</a>および<a href="https://www.mmlab-ntu.com/" target="_blank" rel="noopener noreferrer">MMLab&#64;NTU</a>にて研究に従事しています。
+          <a href="https://liuziwei7.github.io/" target="_blank" rel="noopener noreferrer">Liu Ziwei 教授</a>のご指導のもと研究する機会に恵まれ、大変光栄に思っています。
+          また、<a href="https://brianboli.com/" target="_blank" rel="noopener noreferrer">Bo Li 氏</a>、
+          <a href="https://caizhongang.com/" target="_blank" rel="noopener noreferrer">Zhongang Cai 氏</a>、<a href="https://scholar.google.com/citations?user=jZH2IPYAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Lei Yang 氏</a>からも多大なご支援をいただき、深く感謝しております。
+          現在の研究関心は、<em>マルチモーダル（統合）モデル</em>と<em>空間知能</em>にあります。
         </p>
         <p>
-          <a href="http://www.sxyz.net/" target="_blank" rel="noopener noreferrer">紹興市第一高等学校</a>在学中、
+          <a href="http://www.sxyz.net/" target="_blank" rel="noopener noreferrer">紹興市第一高等学校</a>在学中は、
           <a href="https://www.noi.cn/" target="_blank" rel="noopener noreferrer">情報オリンピック</a>に参加しました。
-          また、<a href="https://icpc.global/" target="_blank" rel="noopener noreferrer">ICPC</a>に出場し、
-          2022年昆明アジア地区大会で<a href="assets/pdf/awards/Kunming.pdf" target="_blank" rel="noopener noreferrer">金メダル</a>、
-          2022年南京アジア地区大会で<a href="assets/pdf/awards/Nanjing.pdf" target="_blank" rel="noopener noreferrer">銀メダル</a>を獲得しました。
-          <a href="https://ntu-icpc.github.io/npc/" target="_blank" rel="noopener noreferrer">Nanyang Programming Contest</a>のコントリビューターです。
+          また、<a href="https://icpc.global/" target="_blank" rel="noopener noreferrer">ICPC（国際大学対抗プログラミングコンテスト）</a>にも出場し、
+          2022年の昆明アジア地区大会で<a href="assets/pdf/awards/Kunming.pdf" target="_blank" rel="noopener noreferrer">金メダル</a>、
+          南京アジア地区大会で<a href="assets/pdf/awards/Nanjing.pdf" target="_blank" rel="noopener noreferrer">銀メダル</a>を獲得しました。
+          <a href="https://ntu-icpc.github.io/npc/" target="_blank" rel="noopener noreferrer">Nanyang Programming Contest</a>のコントリビューターも務めています。
         </p>
         <p>
-          趣味はチェスで、Lichess の ID は <a href="https://lichess.org/@/pufanyi" target="_blank" rel="noopener noreferrer">&#64;pufanyi</a> です。現在のレーティングは 2086（ラピッド）です。
+          趣味はチェスです。Lichess ID は <a href="https://lichess.org/@/pufanyi" target="_blank" rel="noopener noreferrer">&#64;pufanyi</a> で、現在のラピッドレーティングは 2086 です。
         </p>
       </div>
       <div class="keywords">
