--- a/src/app/components/image-lightbox/image-lightbox.html
+++ b/src/app/components/image-lightbox/image-lightbox.html
@@ -1,13 +1,9 @@
 <img
+  #img
   [src]="src()"
   [alt]="alt()"
   [width]="width()"
   [height]="height()"
   [class]="imgClass()"
-  class="lightbox-trigger"
-  (click)="open()"
+  [attr.data-zoom-src]="src()"
 />
-
-<dialog #dialog (click)="onBackdropClick($event)">
-  <img [src]="src()" [alt]="alt()" class="lightbox-image" (click)="close()" />
-</dialog>
