--- a/src/app/components/language-switcher/language-switcher.html
+++ b/src/app/components/language-switcher/language-switcher.html
@@ -1,16 +1,28 @@
-<div class="lang-switcher" (mouseenter)="show()" (mouseleave)="hide()">
-  <button aria-label="Switch language" title="Switch language">
+<div class="lang-switcher">
+  <button
+    class="lang-trigger"
+    (click)="toggle()"
+    [attr.aria-label]="triggerLabel[langService.current()]"
+    [attr.title]="triggerLabel[langService.current()]"
+    [attr.aria-expanded]="open()"
+    aria-haspopup="menu"
+  >
     <i class="ph-duotone ph-translate" style="font-size: 20px"></i>
   </button>
   @if (open()) {
-    <div class="lang-dropdown">
+    <div class="lang-dropdown" role="menu">
       @for (l of languages; track l.code) {
         <button
           class="lang-option"
           [class.lang-active]="langService.current() === l.code"
           (click)="select(l.code)"
+          role="menuitemradio"
+          [attr.aria-checked]="langService.current() === l.code"
         >
-          {{ l.label }}
+          <span>{{ l.label }}</span>
+          @if (langService.current() === l.code) {
+            <i class="ph-duotone ph-check" style="font-size: 14px"></i>
+          }
         </button>
       }
     </div>
